<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context=".MainActivity">

    <TextView
            android:text="@string/judul"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/judul" android:textSize="24sp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" android:layout_marginRight="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp" android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:textStyle="bold"
    />
    <TextView
            android:text="@string/label_nama_binatang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/judul"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/input_nama_binatang" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="24dp" android:hint="@string/hint_input_nama_binatang" android:textSize="14sp"/>
    <TextView
            android:text="@string/label_nama_latin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/button_cari_latin"/>
    <Button
            android:text="@string/button_cari_latin"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:id="@+id/button_cari_latin" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/input_nama_binatang" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp" android:textAllCaps="false"/>
    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:background="@drawable/customborder"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp" app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" android:id="@+id/linearLayout">
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/textView_latin"
                android:background="#ffff"
                android:textColor="#000000"/>

    </LinearLayout>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:textSize="24sp"/>
</android.support.constraint.ConstraintLayout>